--- a/src/_includes/macros/overlayToc.njk
+++ b/src/_includes/macros/overlayToc.njk
@@ -1,6 +1,6 @@
 
 
-{% macro overlayToc(content,h2=false,title="",printToc=true) %}
+{% macro overlayToc(content,h2=false,title="",printToc=true,about=false) %}
 
 
 
