--- a/src/_includes/components/navigation.njk
+++ b/src/_includes/components/navigation.njk
@@ -34,7 +34,7 @@
   {% set currentYear = false %}
 {% endif %}
      
-       <nav  id="SubItem02" style="display:none;"  class="submenu" onclick="toggleSubNav('btnItem02')";>
+       <nav  id="SubItem02" style="display:none;"  class="submenu" onclick="toggleSubNav('btnItem02');">
     {% include  "archiveTOC.njk" %}
     </nav>
      
