--- a/src/index.njk
+++ b/src/index.njk
@@ -52,8 +52,15 @@ JSON-LD for:
 </div>
 
 <p>
-I work in  
- <a class="p-org h-card" href="https://www.ihpst.cnrs.fr/"> IHPST</a>, <a class="p-org h-card" href="https://www.pantheonsorbonne.fr/">Université Paris I Panthéon Sorbonne</a> and in <a class="p-org h-card" href="https://www.iri.centrepompidou.fr/">Institut de Recherche et d'Innovation</a>.
+
+ 
+  I am a researcher (Chargé de recherche) in 
+  <a class="p-org h-card" href="http://www.cnrs.fr/"> CNRS</a>, working in 
+    <a class="p-org h-card" href="https://republique-des-savoirs.fr/equipes/centre-cavailles/"> Centre Cavaillès</a>
+  <a class="p-org h-card" href="https://republique-des-savoirs.fr/"> République des Savoirs USR 3608</a>,   <a class="p-org h-card" href="https://www.ens.fr/"> École Normale Supérieure</a>.
+
+
+ 
 </p>
 
     <p class="">
