--- a/src/publications/articles/2019-Montevil-Possibility-Spaces-Novelty/index.njk
+++ b/src/publications/articles/2019-Montevil-Possibility-Spaces-Novelty/index.njk
@@ -1,4 +1,6 @@
 ---
+illust: Bergson.jpg
+illustClass: darkFilter
 excerpt: What is a biological novelty? Is it possible to coin a sound concept of new possibility? What articulation between the concepts of novelty and function?
 tags:
     - closure
