--- a/assets/sass/critical.scss
+++ b/assets/sass/critical.scss
@@ -471,6 +471,7 @@ img {
     display: block;
      margin-right:  var(--gap-m) ;
      margin-bottom:  var(--gap-m) ;
+     width: auto;
   }
   &.right {
     display: block;
