--- a/src/_includes/macros/videoEmbed.njk
+++ b/src/_includes/macros/videoEmbed.njk
@@ -4,6 +4,7 @@
  
  {% set regExp = r/.*youtube.*/g %}
  {% set regExp2 = r/.*mp4.*/g %}
+ {% set regExp2b = r/.*MP4.*/g %}
 {% set regExp3 = r/.*mp3.*/g %}
 
 
@@ -12,7 +13,7 @@
 
 {{video | markdownify | safe }}
 
-{% elif regExp2.test(video) %}
+{% elif regExp2.test(video) or  regExp2b.test(video)%}
 <video controls class="wrap">
   <source src="{{video}}" type="video/mp4">
   <p>Your browser doesn't support HTML5 video. Here is
