--- a/src/publications/articles/2021-Montevil-episteme-computational-empiricism/index.njk
+++ b/src/publications/articles/2021-Montevil-episteme-computational-empiricism/index.njk
@@ -1,6 +1,6 @@
 ---
 illust: fig1.png
-hasPDF: false
+hasPDF: true
 hasFullText: true
 date: 2021-07-30
 excerpt: "What do mainstream scientists acknowledge as original scientific contributions, that is,  what is the current épistémè in natural sciences?"
@@ -24,6 +24,8 @@ syndication:
 </p>
   <p class="noindent"><span class="paragraphHead">keywords:</span>  Philosophy, science
 <hr>
+
+{#
 <h3 class="center"> <a class="buttonlink" href="https://www.philosophy-world-democracy.org/computational-empiricism"> Free access on the journal website. </a></h3>
 
 
@@ -37,7 +39,9 @@ syndication:
                                                                     
    </figure>
 
-   {#
+   #}
+   
+   
    <h3 class='sectionHead' id='x1-10001'><span class='titlemark'>1   </span> Introduction</h3>
 <!-- l. 43 --><p class='noindent'>Provided that, for better and worse, the historical model of modern sciences is classical mechanics,
 theories, and theorization used to have a central role in mainstream sciences. Then, the decline of
@@ -519,7 +523,7 @@ scientific knowledge (Bailly and Longo <a href='#cite.0@bailly2011'>2011</a>). C
 of proof (empirical and computational). An alternative should recognize the theoretical elaboration
 of knowledge again as critical for science.
 </p>
-#}
+
 
 <h3 class='sectionHead' id='x1-60005'>References</h3>
 
