--- a/src/publications/books/2021-ACM-Informatique-theorique-Stiegler/index.njk
+++ b/src/publications/books/2021-ACM-Informatique-theorique-Stiegler/index.njk
@@ -9,6 +9,8 @@ tags:
     - measurement
 date: 2021-11-19
 illust: cover.jpg
+hasPDF: false
+hasFullText: false
 illustClass:  darkFilter 
 tweets_mentions:
   - "1451107308809900032"
