--- a/src/_includes/macros/videoEmbed.njk
+++ b/src/_includes/macros/videoEmbed.njk
@@ -6,7 +6,7 @@
  {% set regExp2 = r/.*mp4.*/g %}
  {% set regExp2b = r/.*MP4.*/g %}
 {% set regExp3 = r/.*mp3.*/g %}
-
+{% set regExp4 = r/.*soundcloud.*/g %}
 
  
 {% if regExp.test(video) %}
@@ -29,6 +29,12 @@
      a <a href="{{video}}">link to the file</a> instead.
     </audio>
 
+
+
+{% elif regExp4.test(video) %}
+<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="{{video}}&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+
 {% endif %}
+ 
 
 {% endmacro %}
