--- a/src/_includes/components/webmentions/citedby.njk
+++ b/src/_includes/components/webmentions/citedby.njk
@@ -1,25 +1,25 @@
  
 
- {% if gsentry and gsentry[1].length >0%}
+ {% if gsentry and gsentry.citing.length >0%}
 
  <ol class="citedBy">
-{% for article in gsentry[1]%}
+{% for article in gsentry.citing%}
  <li >
  
 
-{% for auth in article.author_id%}
- {% authors article.bib.author[loop.index0], auth, people %}
+{% for auth in article.authorsid%}
+ {% authors article.authors[loop.index0], auth, people %}
  {%- if loop.revindex >2 -%}, {%endif-%}{%- if loop.revindex ===2 %} & {%endif-%}{%- if loop.revindex ===1 %}.{%endif-%}
 {%endfor%} 
 
-{% if article.bib.pub_year!=="NA"%}{{article.bib.pub_year}}. {%endif%}
-{% if article.bib.venue=="NA"%}<i>{%endif%}
-{{article.bib.title | title}}.
-{% if article.bib.venue=="NA"%}</i>{%else%}
-<i>{{article.bib.venue | title-}}</i>.{%endif%}
-{% if not article.pub_url==""%}<a href="{{article.pub_url}}">Publisher</a> {%endif%}
-{% if not article.eprint_url==""%}
-<a href="{{article.eprint_url}}">Eprint </a>
+{% if article.year!=="NA"%}{{article.year}}. {%endif%}
+{% if article.journal=="NA"%}<i>{%endif%}
+{{article.title | title}}.
+{% if article.journal=="NA"%}</i>{%else%}
+<i>{{article.journal | title-}}</i>.{%endif%}
+{% if not article.mainlink==""%}<a href="{{article.mainlink}}">Publisher</a> {%endif%}
+{% if not article.pdflink==""%}
+<a href="{{article.pdflink}}">Eprint </a>
 {%endif%}
 
  </li >
