--- a/src/redirects.njk
+++ b/src/redirects.njk
@@ -179,6 +179,32 @@ eleventyExcludeFromCollections: true
 /*/perspectives-organisms-biological-time-symmetries-and-singularities           /publications/books/2014-LM-Perspectives-Organisms      301
 /*/content/towards-theory-organisms         /publications/books/2016-SLN-Century-Organism   301
 
+/talks/2009--are-t    /talks/2009--are-there-neutral-forces-in-ecology    301
+/talks/2014--a-nov   /talks/2014--a-novel-3d-model-to-study-the-link-between-hormonal-exposure-and-mammographic-density-in-breast-cancer   301
+/talks/2014--devel    /talks/2014--development-of-software-for-automated-morphology-analysis-sama-to-analyze-morphogenic-effects-of-mammotrophic-hormones-in-vitro   301
+/talks/2014--ias-i     /talks/2014--ias-ihpst-workshop-boundaries-and-levels-of-biological-organization   301
+/talks/2014--la-no  /talks/2014--la-notion-de-mesure-de-la-physique-a-la-biologie   301
+/talks/2015--collo  /talks/2015--colloque-biodiversity-resilience   301
+/talks/2018--collo  /talks/2018--symposium-the-science-of-systems-and-life-alternative-philosophies-new-mathematics   301
+/talks/20/talks/20--collo  /talks/2020--colloque-vie-numerique-sante   301
+/talks/20/talks/20--entre  /talks/2020--entretiens-du-nouveau-monde-industriel-2020-prendre-soin-de-l-informatique-et-des-generations   301
+/talks/2020--works  /talks/2020--workshop-what-does-it-mean-for-chemicals-to-be-endocrine-disruptors   301
+/talks/2021--evene  /talks/2021--evenement-l-anastase-de-la-philosophie   301
+/talks/2021--prese   /talks/2021--evenement-l-anastase-de-la-philosophie   301
+/talks/2021--scien   /talks/2021--science-in-the-storm-gmos-agnotology-theory   301
+/talks/2021--semin  /talks/2021--seminaire-2020-2021-vie-numerique-sante   301
+/talks/2022--ecran   /talks/2022--ecrans-parents-enfants-comment-co-habiter   301
+/talks/2022--inter   /talks/2022--intersecting-paths-across-mathematics-biology-and-epistemology-a-colloquium-in-honor-of-giuseppe-longo-and-ana-soto   301
+/talks/2022--jean   /talks/2022--jean-luc-nancy-anastasis-de-la-pensee   301
+/talks/2022--life   /talks/2022--life-lust-philosophy   301
+/talks/2022--organ   /talks/2022--organisation-du-vivant-organologie-des-savoirs-technodiversite-biodiversite-noodiversite-nouveaux-regimes-de-l-habiter   301
+/talks/2022--princ   /talks/2022--principles-of-beginning   301
+/talks/2022--semin  /talks/2022--seminaire-2021-2022-vie-numerique-sante   301
+/talks/2022--the-a    /talks/2022--the-anastasis-of-philosophy-seminar   301
+/talks/2022--the-o   /talks/2022--the-other-beginning-of-philosophy   301
+/talks/2023--anast    /talks/2023--anastase-de-la-philosophie   301
+/talks/2023--inaug  /talks/2023--inauguration-programme-interdisciplinaire-fondations-theoriques-de-la-biologie   301
+
 
 
 
