--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -18,6 +18,7 @@
     {% include "add-css.njk" %}
 {% endeach %}
 
+{#
   {% if build.env == 'production' %}
     {% set criticalJs %}
     {% include_raw config.dir.dist + "/js/" + hashes_critical[config.dir.assets + '/js/critical.js'] %}
@@ -28,6 +29,14 @@
   {% else %}
     <script src="/js/critical-iife.js"></script>
   {% endif %}
+#}
+
+    {% set criticalJs %}
+    {% include_raw config.dir.dist + '/js/critical.legacy.js'  %}
+    {% endset %}
+    <script>
+      {{ criticalJs | replace('//# sourceMappingURL=', '//# sourceMappingURL=/js/') | safe }}
+    </script>
 
   {% include 'components/google-analytics.njk' %}
 
